--- a/src/package.json
+++ b/src/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/CodeForEindhoven/GovDo-backend/issues"
   },
-  "homepage": "https://github.com/CodeForEindhoven/GovDo-backend#readme"
+  "homepage": "https://github.com/CodeForEindhoven/GovDo-backend#readme",
+  "scripts": {
+    "start": " node main.js"
+  }
 }
