--- a/src/package.json
+++ b/src/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "hapi": "^16.1.1",
     "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": " node main.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,5 @@
   "bugs": {
     "url": "https://github.com/CodeForEindhoven/GovDo-backend/issues"
   },
-  "homepage": "https://github.com/CodeForEindhoven/GovDo-backend#readme",
-  "scripts": {
-    "start": " node main.js"
-  }
+  "homepage": "https://github.com/CodeForEindhoven/GovDo-backend#readme"
 }
