--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": " node main.js"
+    "start": " node main.js",
+	"migrate": "./node_modules/.bin/sequelize --migrations-path sequelize/migrations --config config.json --env database db:migrate"
   },
   "repository": {
     "type": "git",
